    (currently it creates a cell array of sym objects.)

  * The full set of assumptions implemented by Sympy can now be used.
    For example, `syms p prime` assumes `p` is prime.

  * `assume(x, 'clear')` can be used to clear assumptions on variables.
    Previously undocumented commands such as `sym(x, 'clear')` and
    `syms x clear` will be deprecated in a future version.

  * `solve` now works with inequalities.

  * `sym('1.3')` now creates the rational number 13/10.

  * A new keyword option `coeffs(f, x, 'all')` returns both zero and
    non-zero coefficients.

  * Update minimum versions of SymPy to 1.0 and Octave to 4.0.0, so
    we can remove some crufty workarounds.

  * Remove deprecated method for changing the Python executable using
    `sympref`: instead use the environment variable `PYTHON`.

  * Deprecation notice: `evalpy` will be removed in a future release.

  * Change (and document!) default matrix norm to the 2-norm (it was
    Frobenius).

  * `heaviside` accepts a second argument for its value at zero.

  * `isfinite` behaves correctly for variables (and is documented).

  * New experimental Python communication using the native Python/C
    interface, due to Abhinav Tripathi during Google Summer of Code 2016.

  * Bug fix: assign `[]` to row/column removes that that row/column.

  * `char(x)` now gives a more-human readable output, useful for example
    in labelling a figure.



octsympy 2.4.1-dev
==================

  * ezplot supports implicit plotting of f(x, y) == 0.



octsympy 2.4.0 (2016-05-24)
===========================

  * New symbolic commands:

          acsc          csch          gammaln       polylog
          asec          dilog         hypergeom     psi
          asech         ei            hypot         resize
          besseljn      expint        igamma        sech
          besselyn      ezsurf        jordan        signIm
          cat           fresnelc      laguerreL     sinint